Adding form validation

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ div > label {
   color: #767676;
 }
 
+#error {
+  display: none;
+  color: red;
+}
+
 /* responded */
 .responded {
   transition: 0.4s;
